# python-ml-template

./: .travis.yml  README.md  pyproject.toml
notebooks/: example.ipynb
notebooks/experiments/: 2020-06-28 Experiment Example.ipynb
python_ml_template/ml/stage01_preprocess/: __main__.py  dl.py  preprocess.py
python_ml_template/utils/: __init__.py  hello_world.py
scripts/: say-hello-world.py
tests/: test_utils.py
