[tool.poetry]
name = "python_ml_template"
version = "0.1.0"
description = "Template for building ML projects with Python. Includes several tips & techniques for improving development and deployment workflow."
authors = ["Chad Crawford <chad@cacrawford.org>, Trace Smith <tsmith5151@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0"
scikit-learn = "^0.23.1"

pytest = {version = "^5.4.3", optional = true} 
pytest-cov = {version = "^2.0.0", optional = true} 
autopep8 = {version = "^1.5.3", optional = true} 
flake8 = {version = "^3.8.3", optional = true} 

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[tool.poetry.extras]
tests = ["pytest", "pytest-cov","flake8", "autopep8"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
